// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should have class 1`] = `
<button
  class="button clear size_m"
  type="submit"
>
  Test
</button>
`;

exports[`Button should render Button 1`] = `
<button
  class="button primary size_m"
  type="submit"
>
  Test
</button>
`;
